Fixed alignment of icons in card header.

--- a/src/styles/components/_Cards.scss
+++ b/src/styles/components/_Cards.scss
@@ -26,7 +26,7 @@
 
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 
     > .title {
       color: var(--unity-black);
@@ -40,6 +40,7 @@
       display: flex;
       gap: 8px;
       opacity: 0;
+      padding-top: 8px;
       visibility: hidden;
     }
 
